--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "parcel watch build ./static/pages/**/*.html",
     "build": "parcel build ./static/pages/**/*.html --no-minify",
     "dev": "npm run watch & node ./src/server.js",
-    "start": "npm run build && node ./src/server.js"
+    "start": "npm run build && node ./src/server.js",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.3",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.32.13"
   }
