--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build ./static/pages/**/*.html --no-minify",
     "dev": "npm run watch & node ./src/server.js",
     "start": "parcel build ./static/pages/**/*.html --no-minify && node ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "stylelint": "stylelint '**/*.scss'"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,10 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
     "parcel-bundler": "^1.12.5",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "stylelint": "^13.13.1",
+    "stylelint-config-airbnb": "0.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0"
   }
 }
