--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,15 @@
     "browser": true,
     "node": true
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2021
   },
-  "rules": {}
+  "rules": {
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "off",
+    "no-param-reassign": "off",
+    "import/prefer-default-export": "off",
+    "dot-notation": "off"
+  }
 }
