--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,10 @@
 {
-  "extends": "airbnb-base",
+//   "extends": "airbnb-base",
   "env": {
     "browser": true,
     "node": true
   },
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2021
-  },
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
