--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "homepage": "https://github.com/mukhindev-praktikum/middle.messenger.praktikum.yandex#readme",
   "dependencies": {
     "dotenv": "^9.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -36,6 +39,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-airbnb": "0.0.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "stylelint-scss": "^3.19.0",
+    "typescript": "^4.3.2"
   }
 }
