Обрабатывать события компонентов

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,31 @@
 {
-//   "extends": "airbnb-base",
+  "extends": ["airbnb-typescript/base"],
   "env": {
     "browser": true,
     "node": true
   },
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "no-param-reassign": "off",
     "import/prefer-default-export": "off",
     "dot-notation": "off",
-    "arrow-body-style": "off"
+    "@typescript-eslint/dot-notation": "off",
+    "@typescript-eslint/no-shadow": "off",
+    "arrow-body-style": "off",
+    "@typescript-eslint/lines-between-class-members": [
+      "error",
+      "always",
+      { "exceptAfterSingleLine": true }
+    ],
+    "no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_$" }
+    ]
   }
 }
