--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.27.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.23.4",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.32.13",
     "stylelint": "^13.13.1",
