--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "no-unused-vars": [
       "error",
       { "argsIgnorePattern": "^_$" }
-    ]
+    ],
+    "@typescript-eslint/indent": "off"
   }
 }
