--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "es2018",
+    "target": "es2018"
   }
 }
