--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main. Название pull request может быть любое.",
   "main": "index.js",
   "scripts": {
-    "watch": "parcel watch build ./static/pages/**/*.html",
-    "build": "parcel build ./static/pages/**/*.html --no-minify",
+    "watch": "parcel watch build ./static/index.html",
+    "build": "parcel build ./static/index.html --no-minify",
     "dev": "npm run watch & node ./src/server.js",
-    "start": "parcel build ./static/pages/**/*.html --no-minify && node ./src/server.js",
+    "start": "parcel build ./static/index.html --no-minify && node ./src/server.js",
     "lint": "eslint ./src",
     "stylelint": "stylelint '**/*.scss'"
   },
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mukhindev-praktikum/middle.messenger.praktikum.yandex#readme",
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
