--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mukhindev-praktikum/middle.messenger.praktikum.yandex#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
