--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
       { "argsIgnorePattern": "^_$" }
     ],
     "@typescript-eslint/indent": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "max-classes-per-file": "off"
   }
 }
