--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "build": "parcel build ./static/index.html --no-minify",
     "dev": "npm run watch & node ./src/server.js",
     "start": "parcel build ./static/index.html --no-minify && node ./src/server.js",
+    "test": "./node_modules/.bin/mocha",
     "lint": "eslint ./src",
     "stylelint": "stylelint '**/*.scss'"
+  },
+  "directories": {
+    "src": "./src",
+    "test": "./test"
   },
   "repository": {
     "type": "git",
@@ -27,18 +32,29 @@
     "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
+    "@types/chai": "^4.2.21",
+    "@types/jsdom": "^16.2.13",
+    "@types/mocha": "^8.2.3",
     "@types/node": "^15.12.4",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
+    "jsdom": "^16.6.0",
+    "mocha": "^9.0.2",
     "parcel-bundler": "^1.12.5",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.13",
     "stylelint": "^13.13.1",
     "stylelint-config-airbnb": "0.0.0",
