--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "helmet": "^4.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
