--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
-  "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main. Название pull request может быть любое.",
+  "description": "Cамостоятельная практическая работа, выполняемая в рамках обучения на курсе Мидл фронтенд-разработчик от Яндекс.Практикум",
   "main": "index.js",
   "scripts": {
-    "watch": "parcel watch build ./static/index.html",
-    "build": "parcel build ./static/index.html --no-minify",
-    "dev": "npm run watch & node ./src/server.js",
-    "start": "parcel build ./static/index.html --no-minify && node ./src/server.js",
-    "test": "./node_modules/.bin/mocha",
+    "build": "webpack",
+    "dev": "webpack serve",
+    "test": "mocha",
     "lint": "eslint ./src",
     "stylelint": "stylelint '**/*.scss'"
   },
@@ -37,6 +35,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@types/chai": "^4.2.21",
@@ -49,18 +48,26 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
+    "html-webpack-plugin": "^5.3.2",
     "jsdom": "^16.6.0",
+    "mini-css-extract-plugin": "^2.1.0",
     "mocha": "^9.0.2",
-    "parcel-bundler": "^1.12.5",
-    "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.13",
+    "sass-loader": "^12.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-airbnb": "0.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "typescript": "^4.3.2"
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.2",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
