--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cамостоятельная практическая работа, выполняемая в рамках обучения на курсе Мидл фронтенд-разработчик от Яндекс.Практикум",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "build": "webpack",
+    "build:container": "docker build -t chat .",
     "dev": "webpack serve",
     "test": "mocha",
     "lint": "eslint ./src",
@@ -55,6 +57,7 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "jsdom": "^16.6.0",
     "mini-css-extract-plugin": "^2.1.0",
     "mocha": "^9.0.2",
