--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepare": "husky install",
     "build": "webpack",
     "build:container": "docker build -t chat .",
+    "start": "node ./server/server.js",
     "dev": "webpack serve",
     "test": "mocha",
     "lint": "eslint ./src",
